# Kopkad

./: .gitignore  ARCHITECTURAL_REFACTORING_GUIDE.md  AUDIT_ASSESSMENT_REPORT.md  AUDIT_SYSTEM_GUIDE.md  BUSINESS_CENTRIC_METRICS_UPDATE.md  BUSINESS_SWITCHING_API.md  BUSINESS_SWITCHING_COMPLETE.md  BUSINESS_SWITCHING_IMPLEMENTATION_STATUS.md  ENCRYPTION_KEY_FOR_RENDER.md  EXPENSE_CREATION_FIXES.md  EXPENSE_FIELD_FIXES.md  FINAL_IMPLEMENTATION_SUMMARY.md  FINAL_OPTIMIZATION_SUMMARY.md  FRONTEND_BACKEND_COMPATIBILITY_REPORT.md  FRONTEND_NOTIFICATION_FIXES.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION_GUIDE.md  MIGRATION_STRATEGY.md  MISSING_IMPORT_FIX.md  Makefile  OPTIMIZATION_COMPLETE.md  PAID_MARKINGS_FILTER_FIX.md  PERFORMANCE_OPTIMIZATION_GUIDE.md  PYDANTIC_V2_FIX.md  QUICK_START.md  RBAC_IMPLEMENTATION_VERIFICATION.md  README_OPTIMIZATION.md  REFACTORING_COMPLETE_GUIDE.md  REFACTORING_STATUS.md  REQUEST_PAYMENT_ENDPOINT_IMPLEMENTATION.md  SERVICE_USER_REFACTORING_GUIDE.md  SHOWROOM360_REFACTORING_SUMMARY.md  TESTING_IMPLEMENTATION_SUMMARY.md  USER_ENDPOINTS_VERIFIED.md  USER_MODULE_COMPLETE.md  USER_MODULE_REFACTORING_COMPLETE.md  add_active_business_id.sql  add_business_id_to_expense_cards.sql  add_cancel_payment_request.sql  add_performance_indexes.sql  (+44 more)
alembic/: env.py
api/: business.py  expenses.py  financial_advisor.py  logout.py  payments.py  savings.py  settings.py  unpaid_savings.py  user.py  whatsapp.py
config/: settings.py
core/: logger.py
database/: 003_make_savings_account_unit_id_nullable.sql  __init__.py  postgres.py  postgres_optimized.py
middleware/: auth.py  caching.py
migrations/: 001_add_business_admin_rbac.sql  001_rollback_business_admin_rbac.sql  002_add_missing_notification_type_enum_values.sql  002_rollback_add_missing_notification_type_enum_values.sql  README.md
models/: audit.py  business.py  events.py  expenses.py  financial_advisor.py  payments.py  savings.py  savings_group.py  settings.py  token.py  user.py  user_business.py
schemas/: analytics.py  business.py  expenses.py  financial_advisor.py  payments.py  savings.py  (+3 more)
(+122 files in other folders)
